# HiperForge

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
hiperforge/application/: __init__.py  container.py  dto.py
hiperforge/application/services/: __init__.py  context_builder.py  executor.py  planner.py  tool_dispatcher.py
hiperforge/application/use_cases/: __init__.py  create_project.py  create_task.py  create_workspace.py  manage_prefs.py  plan_task.py  run_task.py  switch_workspace.py
hiperforge/cli/: __init__.py  error_handler.py  main.py
hiperforge/cli/commands/: __init__.py  config.py  project.py  run.py  workspace.py
hiperforge/cli/ui/: confirm.py  plan_view.py  renderer.py  spinner.py
hiperforge/core/: config.py  constants.py  events.py  guardrails.py  logging.py
hiperforge/core/utils/: datetime.py  hashing.py  ids.py  retry.py
hiperforge/domain/: exceptions.py
hiperforge/domain/entities/: project.py  task.py  tool_call.py  workspace.py
hiperforge/domain/ports/: llm_port.py  session_port.py  storage_port.py  tool_port.py
hiperforge/domain/value_objects/: file_ref.py  message.py  token_usage.py
hiperforge/infrastructure/llm/: anthropic.py  base.py  groq.py  ollama.py  openai.py  registry.py
hiperforge/infrastructure/session/: in_memory_session.py  session_flusher.py
hiperforge/infrastructure/storage/: base.py  json_storage.py  workspace_locator.py
hiperforge/memory/: migrations.py  serializer.py  store.py
hiperforge/memory/repositories/: preferences_repo.py  project_repo.py  task_repo.py  workspace_repo.py
hiperforge/memory/schemas/: preferences.py  project.py  workspace.py
hiperforge/tools/: __init__.py  base.py  code_analysis.py  file_ops.py  git.py  shell.py  web.py
tests/: conftest.py
tests/unit/application/: test_dto_and_constants.py
tests/unit/application/services/: test_context_builder.py  test_executor.py  test_planner.py  test_tool_dispatcher.py
tests/unit/core/: test_events.py
tests/unit/core/utils/: test_utils.py
tests/unit/domain/: test_exceptions.py
tests/unit/domain/entities/: test_project_workspace.py  test_task.py  test_tool_call.py
tests/unit/domain/value_objects/: test_value_objects.py
tests/unit/infrastructure/llm/: test_llm_adapters.py
tests/unit/tools/: test_tool_call_id_and_shell_safety.py
